Feature (Access GreenHouses) Select from available GreenHouses
What does this pr do?

Have an admin user to acces the available greenhouses in order for the
to evaluate plant health and nutrition

Any tasks involved?

Create GreenHouses page
Style the page with CSS
Update Index/home page

Any screenshots?

Any related pivotal stories?

[Finishes #166996588]

--- a/UI/index.html
+++ b/UI/index.html
@@ -8,6 +8,83 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
   </head>
   <body>
+    <header>
+        <div class="header">
+          <img src="img/logo.png">
+          <h1>flowered.com</h1>
+        </div>
+    </header>
+    <nav>
+        <div>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="greenhouses.html">Green-Houses</a></li>
+            </ul>
+        </div>
+    </nav>
     <h1>Welcome To Flower Farm</h1>
+    <footer>
+      <!-- <div class="footer-divide"> -->
+        <div class="divide">
+          <h3>CAREERS</h3>
+          <div class="main-coln">
+            <div class="coln1">
+              <h5>INTAKE</h5>
+              <h6>FLOWER ATTENDANT</h6>
+              <h6>GARDENER</h6>
+            </div>
+            <div class="coln2">
+            </div>
+          </div>
+        </div>
+        <div class="divide">
+          <h3>ABOUT US</h3>
+          <div class="main-coln">
+            <div class="coln1">
+              <h5>PROJECTS</h5>
+              <h6>FLOWER CRAFT</h6>
+              <h6>FLOWER EDUCATION</h6>
+            </div>
+            <div class="coln2">
+            </div>
+          </div>
+        </div>
+        <div class="divide">
+          <h3>CATEGORIES</h3>
+          <div class="main-coln">
+            <div class="coln1">
+              <h5>AFRICAN MARIGOLD</h5>
+              <h6>CARNATION FLOWERED</h6>
+              <h6>TALL F1 HYBRIDS</h6>
+              <h6>SEMI TALL F1 HYBRIDS</h6>
+              <h6>DWARF F1 HYBRIDS</h6>
+            </div>
+            <div class="coln2">
+              <h5>FRENCH MARIGOLD</h5>
+              <h6>DWARF DOUBLE</h6>
+              <h6>DWARF DOUBLE PETITE</h6>
+              <h6>FRENCH DWARF SINGLE</h6>
+            </div>
+          </div>
+        </div>
+        <div class="divide">
+          <h3 id="contact">CONTACT</h3>
+          <div class="main-coln">
+            <div class="coln1">
+              <h5>INSTITUTION</h5>
+              <h6>EMAIL: <i>arrotechdesign@gmail.com</i></h6>
+              <h6>PHONE: <i>+254 797 568 564</i></h6>
+            </div>
+            <div class="coln2">
+            </div>
+          </div>
+          <h3>SOCIAL MEDIA</h3>
+          <h6>TWITTER: <i>@Arrotech</i></h6>
+          <h6>INSTAGRAM: <i>arrotech</i></h6>
+          <h6>FACEBOOK PAGE: <i>Arrotech</i></h6>
+          <div class="sharethis-inline-follow-buttons"></div>
+        </div>
+      <!-- </div> -->
+    </footer>
   </body>
 </html>
