Feature (Blocks) Add Blocks details
What oes this pr do?

Have a user able to provide block details.

Any tasks involved?

Add block details to the form.
Style the form with CSS

Any screenshots?

Any related pivotal stories?

[Finishes #166996599]

--- a/UI/greenhouses.html
+++ b/UI/greenhouses.html
@@ -29,14 +29,18 @@
                 <p class="or"><i><=></i></p>
                 <form>
                     <input type="text" placeholder="Name">
-                    <input type="text" placeholder="Id">
+                    <input type="text" placeholder="Number of blocks">
+                    <h2>Blocks</h2><br>
+                    <input type="text" placeholder="Block No.">
+                    <input type="text" placeholder="Number of beds">
                     <input type="submit" value="Submit" onclick="callToast()"><br>
                 </form>
+
             </div>
             <div class="right">
                 <h1>How to go about this?</h1><br>
                 <p><i>GreenHouse name i.e Dwarf F1 Hybrids</i></p><br>
-                <p><i>GreenHouse Id. i.e FLC001 </i></p>
+                <p><i>GreenHouse blocks no.. i.e 6 </i></p>
             </div>
         </div>
         <footer>
