Feature (Flower Bed) Flower bed details
What does this pr do?

Have a user able to evaluate flower farm by flower bed details

Any related pivotal stories?

[Finishes #166996622]

--- a/UI/greenhouses.html
+++ b/UI/greenhouses.html
@@ -33,6 +33,10 @@
                     <h2>Blocks</h2><br>
                     <input type="text" placeholder="Block No.">
                     <input type="text" placeholder="Number of beds">
+                    <h2>Beds</h2><br>
+                    <input type="text" placeholder="Bed No.">
+                    <input type="text" placeholder="Flower type">
+                    <input type="text" placeholder="Distance per square meter">
                     <input type="submit" value="Submit" onclick="callToast()"><br>
                 </form>
 
