Feature (SpecificReport) Give flower report
What does this pr do?

Have a user able to give report on the top, middle and base part of a
specific flower.

Any related pivotal stories?

[Finishes #167011544]

--- a/UI/index.html
+++ b/UI/index.html
@@ -19,6 +19,7 @@
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="greenhouses.html">Green-Houses</a></li>
+                <li><a href="report.html">Report</a></li>
             </ul>
         </div>
     </nav>
