--- a/UI/report.html
+++ b/UI/report.html
@@ -35,29 +35,45 @@
               <button class="collapsible">+</button>TOP
               <div class="content">
                 <form>
-                  <textarea rows="10" cols="50">Add results...</textarea><br>
+                  <textarea rows="4" cols="50">Add results...</textarea><br>
                   <button>Add</button>
                 </form>
+                <button class="collapsible">+</button>Health
+                <div class="content">
+                  <form>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <button>Add</button>
+                  </form>
+                </div>
               </div>
               <button class="collapsible">+</button>MIDDLE
               <div class="content">
                 <form>
-                    <textarea rows="10" cols="50">Add results...</textarea><br>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
                     <button>Add</button>
                 </form>
+                <button class="collapsible">+</button>Health
+                <div class="content">
+                  <form>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <button>Add</button>
+                  </form>
+                </div>
               </div>
               <button class="collapsible">+</button>BASE
               <div class="content">
                 <form>
-                    <textarea rows="10" cols="50">Add results...</textarea><br>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
                     <button>Add</button>
                 </form>
+                <button class="collapsible">+</button>Health
+                <div class="content">
+                  <form>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <button>Add</button>
+                  </form>
+                </div>
               </div>
-            </div>
-            <div class="right">
-                <h1>How to go about this?</h1><br>
-                <p><i>GreenHouse name i.e Dwarf F1 Hybrids</i></p><br>
-                <p><i>GreenHouse blocks no.. i.e 6 </i></p>
             </div>
         </div>
         <script type="text/javascript" src="js/main.js"></script>
