Feature (Bugs) Add bugs report
What does this pr do?

Have an admin user able to add bugs report on a specifically selected
flower

Any related pivotal stories?

[Finishes #167012249]

--- a/UI/report.html
+++ b/UI/report.html
@@ -45,6 +45,13 @@
                     <button>Add</button>
                   </form>
                 </div>
+                <button class="collapsible">+</button>Bugs
+                <div class="content">
+                  <form>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <button>Add</button>
+                  </form>
+                </div>
               </div>
               <button class="collapsible">+</button>MIDDLE
               <div class="content">
@@ -59,6 +66,13 @@
                     <button>Add</button>
                   </form>
                 </div>
+                <button class="collapsible">+</button>Bugs
+                <div class="content">
+                  <form>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <button>Add</button>
+                  </form>
+                </div>
               </div>
               <button class="collapsible">+</button>BASE
               <div class="content">
@@ -67,6 +81,13 @@
                     <button>Add</button>
                 </form>
                 <button class="collapsible">+</button>Health
+                <div class="content">
+                  <form>
+                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <button>Add</button>
+                  </form>
+                </div>
+                <button class="collapsible">+</button>Bugs
                 <div class="content">
                   <form>
                     <textarea rows="4" cols="50">Add results...</textarea><br>
