Feature (Water & Nutrition) Add report on health
What does this pr do?

Have an admin user able to add water & nutrition health report

Any related pivotal stories?

[Finishes #167012450]

--- a/UI/report.html
+++ b/UI/report.html
@@ -27,8 +27,7 @@
             <div class="">
               <div class="report-container">
               <form>
-                Flower Type:<br>
-                <br>
+                <h4>Flower Type:</h4><br>
                 <input type="text" placeholder="Type of flower">
               </form>
               </div>
@@ -41,7 +40,10 @@
                 <button class="collapsible">+</button>Health
                 <div class="content">
                   <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <h4>Water:</h4><br>
+                    <textarea rows="4" cols="50">Add water results...</textarea><br>
+                    <h4>Nutrition:</h4><br>
+                    <textarea rows="4" cols="50">Add nutrition results...</textarea><br>
                     <button>Add</button>
                   </form>
                 </div>
@@ -62,7 +64,10 @@
                 <button class="collapsible">+</button>Health
                 <div class="content">
                   <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <h4>Water:</h4><br>
+                    <textarea rows="4" cols="50">Add water results...</textarea><br>
+                    <h4>Nutrition:</h4><br>
+                    <textarea rows="4" cols="50">Add nutrition results...</textarea><br>
                     <button>Add</button>
                   </form>
                 </div>
@@ -83,7 +88,10 @@
                 <button class="collapsible">+</button>Health
                 <div class="content">
                   <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
+                    <h4>Water:</h4><br>
+                    <textarea rows="4" cols="50">Add water results...</textarea><br>
+                    <h4>Nutrition:</h4><br>
+                    <textarea rows="4" cols="50">Add nutrition results...</textarea><br>
                     <button>Add</button>
                   </form>
                 </div>
