Bug (Bugs) Add report on bugs
What does this pr do?

Have a user able to add report on bugs of a randomly selected flower.

Any related pivotal stories?

[Finishes #167012842]

--- a/UI/report.html
+++ b/UI/report.html
@@ -33,10 +33,6 @@
               </div>
               <button class="collapsible">+</button>TOP
               <div class="content">
-                <form>
-                  <textarea rows="4" cols="50">Add results...</textarea><br>
-                  <button>Add</button>
-                </form>
                 <button class="collapsible">+</button>Health
                 <div class="content">
                   <form>
@@ -49,18 +45,40 @@
                 </div>
                 <button class="collapsible">+</button>Bugs
                 <div class="content">
-                  <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
-                    <button>Add</button>
-                  </form>
+                    <button class="collapsible">+</button>Caterpillars
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
+                    <button class="collapsible">+</button>Thrips
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
+                    <button class="collapsible">+</button>Meaty
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
                 </div>
               </div>
               <button class="collapsible">+</button>MIDDLE
               <div class="content">
-                <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
-                    <button>Add</button>
-                </form>
                 <button class="collapsible">+</button>Health
                 <div class="content">
                   <form>
@@ -73,18 +91,40 @@
                 </div>
                 <button class="collapsible">+</button>Bugs
                 <div class="content">
-                  <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
-                    <button>Add</button>
-                  </form>
+                    <button class="collapsible">+</button>Caterpillars
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
+                    <button class="collapsible">+</button>Thrips
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
+                    <button class="collapsible">+</button>Meaty
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
                 </div>
               </div>
               <button class="collapsible">+</button>BASE
               <div class="content">
-                <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
-                    <button>Add</button>
-                </form>
                 <button class="collapsible">+</button>Health
                 <div class="content">
                   <form>
@@ -97,10 +137,36 @@
                 </div>
                 <button class="collapsible">+</button>Bugs
                 <div class="content">
-                  <form>
-                    <textarea rows="4" cols="50">Add results...</textarea><br>
-                    <button>Add</button>
-                  </form>
+                    <button class="collapsible">+</button>Caterpillars
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
+                    <button class="collapsible">+</button>Thrips
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
+                    <button class="collapsible">+</button>Meaty
+                    <div class="content">
+                      <form>
+                        <h4>Adults:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <h4>Larvae:</h4><br>
+                        <textarea rows="2" cols="10">Count...</textarea><br>
+                        <button>Add</button>
+                      </form>
+                    </div>
                 </div>
               </div>
             </div>
