Bug (GreenHouses) Fix greenhouse pages
What does this pr do?

Change the layout of the greenhouse page

Any related pivotal stories?

[Finishes #167015205]

--- a/UI/greenhouses.html
+++ b/UI/greenhouses.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Green-Houses</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" media="screen" href="css/main.css"/>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/layout.css"/>
   </head>
   <body>
     <header>
@@ -23,31 +23,50 @@
             </ul>
         </div>
     </nav>
-    <div class="main">
-            <div class="left">
-                <h1>Greenhouses</h1><br>
-                <p><i>Select by name and ID</i></p>
-                <p class="or"><i><=></i></p>
-                <form>
-                    <input type="text" placeholder="Name">
-                    <input type="text" placeholder="Number of blocks">
-                    <h2>Blocks</h2><br>
-                    <input type="text" placeholder="Block No.">
-                    <input type="text" placeholder="Number of beds">
-                    <h2>Beds</h2><br>
-                    <input type="text" placeholder="Bed No.">
-                    <input type="text" placeholder="Flower type">
-                    <input type="text" placeholder="Distance per square meter">
-                    <input type="submit" value="Submit" onclick="callToast()"><br>
-                </form>
+      <form id="regForm" action="">
 
-            </div>
-            <div class="right">
-                <h1>How to go about this?</h1><br>
-                <p><i>GreenHouse name i.e Dwarf F1 Hybrids</i></p><br>
-                <p><i>GreenHouse blocks no.. i.e 6 </i></p>
-            </div>
+      <h1>GreenHouse Information:</h1>
+
+      <!-- One "tab" for each step in the form: -->
+      <div class="tab">
+        <p><input placeholder="Name..." oninput="this.className = ''"></p>
+        <p><input placeholder="No of blocks..." oninput="this.className = ''"></p>
+        <p><input placeholder="Distance per square meter..." oninput="this.className = ''"></p>
+      </div>
+
+      <div class="tab"><h3>Blocks</h3>
+        <p><input placeholder="Block no." oninput="this.className = ''"></p>
+        <p><input placeholder="No of beds" oninput="this.className = ''"></p>
+        <p><input placeholder="Distsance per square meter" oninput="this.className = ''"></p>
+      </div>
+
+      <div class="tab"><h3>Beds:</h3>
+        <p><input placeholder="bed no." oninput="this.className = ''"></p>
+        <p><input placeholder="Type of flower" oninput="this.className = ''"></p>
+      </div>
+
+      <div class="tab"><h3>Flower Type:</h3>
+        <p><input placeholder="Flower category" oninput="this.className = ''"></p>
+        <p><input placeholder="Flower name" oninput="this.className = ''"></p>
+      </div>
+
+      <div style="overflow:auto;">
+        <div style="float:right;">
+          <button type="button" id="prevBtn" onclick="nextPrev(-1)">Previous</button>
+          <button type="button" id="nextBtn" onclick="nextPrev(1)">Next</button>
         </div>
+      </div>
+
+      <!-- Circles which indicates the steps of the form: -->
+      <div style="text-align:center;margin-top:40px;">
+        <span class="step"></span>
+        <span class="step"></span>
+        <span class="step"></span>
+        <span class="step"></span>
+      </div>
+
+      </form>
+        <script type="text/javascript" src="js/pagination.js"></script>
         <footer>
           <!-- <div class="footer-divide"> -->
             <div class="divide">
